titulo menu principal

--- a/index4.html
+++ b/index4.html
@@ -11,7 +11,7 @@
 </meta>
 <body>
 
-<a href="#menu" class="lanzador-menu" id="enlace-menu">Menú</a>
+<a href="#menu" class="lanzador-menu" id="enlace-menu">Menú Principal</a>
 
 <p> nuevo texto.</p>
 
