Se actualizó texto modificado en github

--- a/index4.html
+++ b/index4.html
@@ -13,7 +13,7 @@
 
 <a href="#menu" class="lanzador-menu" id="enlace-menu">Menú Principal</a>
 
-<p> nuevo texto nuevo menu.</p>
+<p> nuevo texto nuevo menu ahora en Github.</p>
 
 <!-- Definición del menú-->
 <div id="menu" class="navmenu">
