--- a/index3.html
+++ b/index3.html
@@ -16,6 +16,7 @@
     <ul>
         
         <li><a href="productos.html">Productos</a></li>
+         <li><a href="productos.html">Servicios</a></li>
         <li><a href="reservas.html">Reservas</a></li>
         <li><a href="contacto.html">Contacto</a></li>
     </ul>
